# kinesis_reactivation

./: .env  .gitignore  app.py  kinesis_reactivation.py  learning_loop.py  learning_memory.json  main.py  memory_manager.py  pyproject.toml  requirements.txt  scoring_engine.py
.cursor/rules/: cursor.md
Copy_reactivation_backup/: copy_reactivation_kinesis
ensure file 2026/: .env.template  funnel_analytics.py  learning_loop.py
memory/: leads.db
sequences_data/: funnel_events.json
src/: config.py
src/agents/: nodes.py  state.py  state_machine.py
src/api/: sendgrid.py  webhook.py
src/db/: __init__.py  memory_manager.py
src/llm/: providers.py
src/tools/: compliance.py  enrichment.py  funnel.py  learning_loop.py  objections.py  playbook.py  scoring_engine.py  vault.py
src/ui/: dashboard.py  sidebar.py  statistics.py
vault_data/faiss_index/: index.faiss  index.pkl
